--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,13 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Check for dist directory
+        run: |
+          if [ ! -d "dist" ]; then
+            echo "Error: dist directory does not exist. Build failed."
+            exit 1
+          fi
+
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
