--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,15 +31,17 @@ jobs:
       - name: Build project
         run: npm run build
 
-      # Optionally remove symlinks from the build output
-      - name: Remove symlinks from build output
-        run: find dist -type l -exec rm {} \;
+      # Create a clean copy of the build output that dereferences symlinks and hard links
+      - name: Prepare deployment artifact
+        run: |
+          rm -rf deploy-dist
+          cp -rL dist deploy-dist
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
-          path: dist
+          path: deploy-dist
 
   deploy:
     needs: build
