--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Prepare deployment artifact
         run: |
           rm -rf deploy-dist
-          cp -rL dist deploy-dist
+          cp -r dist/* deploy-dist
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
