--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Prepare deployment artifact
         run: |
           rm -rf deploy-dist
+          mkdir deploy-dist
           cp -r dist/* deploy-dist
 
       - name: Upload artifact
