--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,12 +31,14 @@ jobs:
       - name: Build project
         run: npm run build
 
-      # Create a clean copy of the build output that dereferences symlinks and hard links
+      - name: List build output
+        run: ls -la dist
+
       - name: Prepare deployment artifact
         run: |
           rm -rf deploy-dist
           mkdir deploy-dist
-          cp -r dist/* deploy-dist
+          tar -cf - -C dist . | tar -xf - -C deploy-dist
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
